--- a/HTML/Rocks_Rock/styles.css
+++ b/HTML/Rocks_Rock/styles.css
@@ -8,6 +8,9 @@ header{
     background-color: black;
     padding: 1%;
 }
+sup{
+    font-size: 0.4em;
+}
 div{    
     padding: 1%;
     margin: 1% 4%;
@@ -30,6 +33,13 @@ div{
     border: 0;
     border-collapse: collapse;
     margin: 0 auto;
+}
+nav table{
+    padding: 1%;
+}
+nav a{
+    font-size: 1.17em;
+    font-weight: bold;
 }
 a:link{
     text-decoration: none;                
