MW-Task-List-v1 (Custom API)

--- a/API/Mission_Wise_Task_List-v1/views/index.ejs
+++ b/API/Mission_Wise_Task_List-v1/views/index.ejs
@@ -21,7 +21,7 @@
                         <img src="/images/grid-2.svg" id="grid-layout" alt="grid-layout">
                     </button>
                     <button class="theme-toggle" onclick="toggleTheme()">
-                        <img src="/images/night-mode.svg" id="theme-mode" alt="theme-mode" value="light">
+                        <img src="/images/moon.svg" id="theme-mode" alt="theme-mode" value="light">
                     </button>
                 </div>
             </header>
