--- a/API/Mission_Wise_Task_List-v1/views/editTask.ejs
+++ b/API/Mission_Wise_Task_List-v1/views/editTask.ejs
@@ -18,7 +18,7 @@
                 <h3>Mission-Wise Task List</h3>
                 <div>
                     <button class="theme-toggle" onclick="toggleTheme()">
-                        <img src="/images/night-mode.svg" id="theme-mode" alt="theme-mode" value="light">
+                        <img src="/images/moon.svg" id="theme-mode" alt="theme-mode" value="light">
                     </button>
                 </div>
             </header>
