Canvas Flow v1 (Authentication-Security)

--- a/Authentication_Security/Canvas_Flow-v1/views/login.ejs
+++ b/Authentication_Security/Canvas_Flow-v1/views/login.ejs
@@ -12,9 +12,9 @@
                         <h1>Canvas Flow</h1>
                     </div>
                     <div>
-                        <form action="/authorizeLvl5" id="auth-form" method="post">
-                            <input type="email" placeholder="Email" name="email">
-                            <input type="password" placeholder="Password" name="password">
+                        <form action="/authorizeLvl6" id="auth-form" method="post">
+                            <input type="email" placeholder="Email" name="email" required>
+                            <input type="password" placeholder="Password" name="password" required>
                             <button>Log in</button>
                         </form>
                         <div class="custom-hr">
