--- a/Authentication_Security/Canvas_Flow-v1/views/register.ejs
+++ b/Authentication_Security/Canvas_Flow-v1/views/register.ejs
@@ -10,9 +10,9 @@
         <div id="auth-options">
             <div>
                 <h2 id="register-title">Register</h2>
-                <form action="/registerLvl5" id="sign-up-form" method="post">
-                    <input type="email" placeholder="Email" name="email">
-                    <input type="password" placeholder="Password" name="password">
+                <form action="/registerLvl6" id="sign-up-form" method="post">
+                    <input type="email" placeholder="Email" name="email" required>
+                    <input type="password" placeholder="Password" name="password" required>
                     <button>Sign Up</button>
                 </form>
                 <div class="custom-hr">
